# civilis

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  civilization_100.json  pyproject.toml  simulation_results.json  verify_install.py
.github/workflows/: ci.yml
examples/: civilization_100.py  colab_demo.ipynb
src/civilis/: __init__.py  __version__.py  core.py  embedding_backends.py  simulation.py
src/civilis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_basic.py
